--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "symfony/yaml": "6.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "webonyx/graphql-php": "^15.9"
+        "webonyx/graphql-php": "^15.9",
+        "xylis/faker-cinema-providers": "^2.0"
     },
     "config": {
         "allow-plugins": {
